# parallax

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  _pkgdown.yml  configure.win  cran-comments.md  generate_hex.R
R/: config.R  features.R  filters.R  mesh.R  metrics.R  normals.R  parallax-package.R  read.R  registration.R  segmentation.R  types-coerce.R  types-print.R  types.R  viz.R  zzz.R
docs/: README.md
examples/: quickstart.R  registration-reconstruction.R
inst/: COPYRIGHTS
man/: as_px_cloud.Rd  dot-platform_defaults.Rd  from_lidr.Rd  parallax-package.Rd  plot.px_cloud.Rd  print.px_cloud.Rd  px_aerial.Rd  px_align_scans.Rd  px_alpha_shape.Rd  px_ball_pivot.Rd  px_canopy_height_model.Rd  px_classify_ground.Rd  px_cloud.Rd  px_coarse_align.Rd  px_crop.Rd  px_density_map.Rd  px_detect_cylinders.Rd  px_detect_edges.Rd  px_detect_planes.Rd  px_estimate_normals.Rd  px_filter_radius.Rd  px_filter_statistical.Rd  px_icp.Rd  px_icp_point_to_plane.Rd  px_icp_point_to_point.Rd  px_metrics.Rd  px_orient_normals.Rd  px_plot_registration.Rd  px_plot_segmentation.Rd  px_poisson_reconstruct.Rd  px_random_downsample.Rd  px_read.Rd  px_scan_position.Rd  px_segment_objects.Rd  px_segment_trees.Rd  px_terrestrial.Rd  px_uav.Rd  px_voxel_downsample.Rd  px_write.Rd  to_lidr.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml  features.rs  filters.rs  kdtree.rs  lib.rs  mesh.rs  normals.rs  registration.rs  segmentation.rs  utils.rs  vendor.tar.xz
tests/: testthat.R
vignettes/: getting-started.Rmd  platform-aware-workflows.Rmd
(+14 files in other folders)
